--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ weather.service.appcode = vJWDjTYWp980FhQGBkT_XQ
 weather.service.endpoint = https://weather.api.here.com/weather/1.0/report.xml?app_id=${weather.service.appid}&app_code=${weather.service.appcode}&product=forecast_hourly&metric=false&zipcode=
 
 logging.level.root=WARN
-logging.level.com.infosys=TRACE
+logging.level.com.infosys=INFO
