--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port = 8100
 
+# URL to get temperatures hourly for 7 days in xml payload in USA metrics
 weather.service.appid = tU6nSuEzFlJ7qe28eEkv
 weather.service.appcode = vJWDjTYWp980FhQGBkT_XQ
 weather.service.endpoint = https://weather.api.here.com/weather/1.0/report.xml?app_id=${weather.service.appid}&app_code=${weather.service.appcode}&product=forecast_hourly&metric=false&zipcode=
 
 logging.level.root=WARN
-logging.level.com.infosys=INFO
+logging.level.com.infosys=DEBUG
